src/objects/vlocity_ins__PricingComponent__c.object
<CustomObject>
    <description>DEPRECATED. Use Pricing Elements instead.</description>
    <fields>
        <fullName>vlocity_ins__AddOnText__c</fullName>
        <label>Add-on Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AdjustmentMethod__c</fullName>
        <label>Adjustment Method Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absolute</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                    <default>true</default>
                    <label>Percent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__AdjustmentType__c</fullName>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Markup</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__AlterationValue__c</fullName>
        <label>Alteration Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CalculationMatrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Calculation Matrix</label>
        <referenceTo>vlocity_ins__CalculationMatrix__c</referenceTo>
        <relationshipLabel>Pricing Components</relationshipLabel>
        <relationshipName>PricingComponents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CalculationType__c</fullName>
        <label>Calculation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                    <default>true</default>
                    <label>Simple</label>
                </value>
                <value>
                    <fullName>Attribute Based</fullName>
                </value>
                <value>
                    <fullName>Tier Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ChargeTiming__c</fullName>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recurring</fullName>
                    <default>true</default>
                    <label>Recurring</label>
                </value>
                <value>
                    <fullName>One-time</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContextAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pricing Components</relationshipLabel>
        <relationshipName>PricingComponents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FrequencyValue__c</fullName>
        <label>Frequency Value</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of this Pricing Component. Used to identify the Pricing Component across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique Pricing Component identifier can be used.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PriceSubType__c</fullName>
        <label>Price Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Professional Installation / Installation</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Penalty</fullName>
                </value>
                <value>
                    <fullName>Fee</fullName>
                </value>
                <value>
                    <fullName>Registration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingCode__c</fullName>
        <externalId>true</externalId>
        <label>Pricing Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RecurringFrequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubType__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__UsageAmount__c</fullName>
        <label>Usage Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__UsageUnitOfMeasure__c</fullName>
        <label>Usage Unit of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Pricing Component</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>vlocity_ins__SubType__c</columns>
        <columns>vlocity_ins__CalculationMatrix__c</columns>
        <columns>vlocity_ins__IsActive__c</columns>
        <columns>vlocity_ins__CalculationType__c</columns>
        <columns>vlocity_ins__Amount__c</columns>
        <columns>vlocity_ins__Description__c</columns>
        <columns>vlocity_ins__GlobalKey__c</columns>
        <columns>vlocity_ins__AlterationValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pricing Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Components</pluralLabel>
    <recordTypes>
        <fullName>vlocity_ins__Alteration</fullName>
        <active>true</active>
        <label>Alteration</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__ChargeSpec</fullName>
        <active>true</active>
        <label>Charge Spec</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>